--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.joget.marketplace</groupId>
     <artifactId>textfield-masking</artifactId>
     <packaging>bundle</packaging>
-    <version>7.0.0</version>
+    <version>7.0.1</version>
     <name>textfield-masking</name>
     <url>http://www.joget.org</url>
     <build>
@@ -85,11 +85,11 @@
     <distributionManagement>
         <repository>
             <id>internal</id>
-            <url>http://dev.joget.org/archiva/repository/internal</url>
+            <url>https://dev.joget.org/archiva/repository/internal</url>
         </repository>
         <snapshotRepository>
             <id>snapshots</id>
-            <url>http://dev.joget.org/archiva/repository/snapshots</url>
+            <url>https://dev.joget.org/archiva/repository/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 </project>
